--- a/src/components/EmojiStory/EmojiQuestion/index.css
+++ b/src/components/EmojiStory/EmojiQuestion/index.css
@@ -12,12 +12,13 @@
   align-items: center;
   justify-content: center;
   text-align: center;
-  padding-left: 10px;
-  padding-right: 10px
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 20px
 }
 
 .options {
-  padding: 15px 5px 5px 5px;
+  padding: 15px;
   /* border-top: 1px solid white; */
 }
 
