--- a/src/containers/EmojiStory/StorySummary/index.css
+++ b/src/containers/EmojiStory/StorySummary/index.css
@@ -13,18 +13,19 @@
     align-items: center;
     justify-content: center;
     text-align: center;
-    padding-left: 10px;
-    padding-right: 10px
+    padding: 30px
   }
   
   .storyContainer .emojiDiv {
     width: 100%;
+    padding: 15px;
     flex: 1
     /* margin-bottom: 15vh */
   }
   
   .storyContainer .rememberButton {
-    width: 100%
+    width: 100%;
+    padding: 15px
     /* margin-bottom: 15vh */
   }
   
